#43 make java in containers aware of being inside a container